; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_rangetypes.c_range_overright_internal.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_rangetypes.c_range_overright_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"range types do not match\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @range_overright_internal(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call i64 @RangeTypeGetOid(i32* %14)
  %16 = load i32*, i32** %7, align 8
  %17 = call i64 @RangeTypeGetOid(i32* %16)
  %18 = icmp ne i64 %15, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %3
  %20 = load i32, i32* @ERROR, align 4
  %21 = call i32 @elog(i32 %20, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %22

22:                                               ; preds = %19, %3
  %23 = load i32*, i32** %5, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @range_deserialize(i32* %23, i32* %24, i32* %8, i32* %10, i32* %12)
  %26 = load i32*, i32** %5, align 8
  %27 = load i32*, i32** %7, align 8
  %28 = call i32 @range_deserialize(i32* %26, i32* %27, i32* %9, i32* %11, i32* %13)
  %29 = load i32, i32* %12, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %34, label %31

31:                                               ; preds = %22
  %32 = load i32, i32* %13, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %31, %22
  store i32 0, i32* %4, align 4
  br label %41

35:                                               ; preds = %31
  %36 = load i32*, i32** %5, align 8
  %37 = call i64 @range_cmp_bounds(i32* %36, i32* %8, i32* %9)
  %38 = icmp sge i64 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %35
  store i32 1, i32* %4, align 4
  br label %41

40:                                               ; preds = %35
  store i32 0, i32* %4, align 4
  br label %41

41:                                               ; preds = %40, %39, %34
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local i64 @RangeTypeGetOid(i32*) #1

declare dso_local i32 @elog(i32, i8*) #1

declare dso_local i32 @range_deserialize(i32*, i32*, i32*, i32*, i32*) #1

declare dso_local i64 @range_cmp_bounds(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
